--- a/templates/log.html
+++ b/templates/log.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <meta http-equiv="refresh" content="59"/>
   <title>Read Mail Log</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,22 +10,24 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container-fluid">
-<div class="row">
-<div class="col-sm-12">
-<h3>Reading latest 100 lines in mail log </h3>
-<a href="/maillog" class="btn btn-primary" role="button">Refresh Log</a>
-<a href="/logout" class="btn btn-danger" role="button">Logout</a>
-</div></div></div>
-<hr>
-<div class="container-fluid">
-<div class="row">
-<div class="col-sm-12">
+<div class="container">
+<br>
+    <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+          <th>Displaying Latest 40 Lines: <div class="btn-group">
+      <a href="/maillog" class="btn btn-primary btn-xs" role="button">Refresh Log</a>
+      <a href="/logout" class="btn btn-xs btn-danger" role="button">Logout</a>
+      </div></th></tr>
+    <tbody>
 {% for log in output %}
-    {{ log }}<br>
+    <tr><td>
+    {{ log }}
+    </td>
+    </tr>
 {% endfor %}
-</div>
-</div>
+    </tbody>
+    </table>
 </div>
 </body>
 </html>
